feat: enable virtual threads, add Redis caching, optimize thread pools and connection pools
- Enable spring.threads.virtual.enabled=true across all 14 services
- Replace ThreadPoolTaskExecutor with SimpleAsyncTaskExecutor (virtual threads)
- Replace Executors.newFixedThreadPool/newSingleThreadExecutor with newVirtualThreadPerTaskExecutor
- Pass virtual thread executor to CompletableFuture.runAsync in SSE streaming and deep analysis
- Add Semaphore(5) bulkhead to parser managers to prevent external site overload
- Increase HikariCP pool size to 20 for all DB services
- Add Redis 7 to docker-compose with healthcheck
- Add spring-boot-starter-data-redis to graphs-service and law-service
- Add @Cacheable on LawGraphService and ArticleService read methods (TTL 24-72h)
- Add @CacheEvict on write methods for cache invalidation
- Create RedisCacheConfig with per-cache TTL configuration